--- a/src/scss/components/_embed.scss
+++ b/src/scss/components/_embed.scss
@@ -6,11 +6,13 @@
     margin-block-end: 1lh;
     max-width: 60ch;
   }
+
   &__icon {
     max-width: 1.5rem;
     color: currentColor;
     color: #1da1f2;
   }
+
   &__header {
     display: grid;
     gap: 0.5rem;
@@ -18,7 +20,7 @@
     align-items: center;
     margin-block-end: 1.5rem;
 
-    &:before {
+    &::before {
       content: '';
       grid-column: 1;
       width: 2rem;
@@ -27,18 +29,20 @@
       background-color: #eee;
     }
   }
+
   &__author {
     font-family: $font-sans;
-    // font-weight: bold;
     line-height: 1;
     display: inline-block;
     color: $color-text;
   }
+
   &__date {
     font-size: 0.75rem;
     font-style: italic;
     color: $color-text-mid;
   }
+
   > blockquote {
     width: 100%;
     margin: 0;
@@ -46,12 +50,11 @@
     border: 0;
     margin-block-end: 1rem;
   }
+
   &__footer {
     font-size: 0.75rem;
-
     font-family: $font-sans;
     font-style: normal;
-    // text-align: right;
     line-height: 1.1;
     text-transform: uppercase;
     color: $color-text-mid;
