--- a/src/scss/base/_layout.scss
+++ b/src/scss/base/_layout.scss
@@ -2,8 +2,8 @@
 @use '../abstract/mixins' as *;
 
 *,
-*:before,
-*:after {
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
@@ -12,74 +12,79 @@ html:focus-within {
 }
 
 body {
-  font-family: 'Neue Montreal', sans-serif;
-  margin: 0;
-  color: var(--color-text);
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: var(--color-background);
-
   --color-text: #2a2722;
   --color-background: #fafafa;
   --color-text-mid: #666;
   --color-border-mid: #bdbdbd;
   --color-border-light: #eee;
+
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Neue Montreal', sans-serif;
+  margin: 0;
+  color: var(--color-text);
+  background-color: var(--color-background);
 }
+
 a {
   color: inherit;
 
   &.with-arrow {
-    &:after {
-      margin-inline-start: 0.5ch;
+    &::after {
       display: inline-block;
+      margin-inline-start: 0.5ch;
       content: '→';
     }
-  }
-  &.with-arrow--out {
-    &:after {
-      content: '↗';
+
+    &--out {
+      &::after {
+        content: '↗';
+      }
     }
   }
 }
+
 a:not([class]) {
   &:hover {
     color: $color-text-mid;
   }
 }
-h1 {
-  // text-transform: uppercase;
-}
+
 ul,
 ol {
   padding-left: 1rem;
 }
+
 del {
   color: $color-text-mid;
 }
+
 ins {
   text-decoration: none;
 }
+
 picture img {
   width: 100%;
   height: 100%;
 }
+
 code,
 pre {
-  max-width: 100%;
   overflow-x: scroll;
+  max-width: 100%;
 }
 
 :not(pre) > code {
-  background-color: #eee;
-  // white-space: nowrap;
   position: relative;
-  &:before {
-    content: '';
+  background-color: #eee;
+
+  &::before {
     position: absolute;
-    inset: -0.5ex;
-    background-color: #eee;
-    border-radius: 4px;
     z-index: -1;
+    inset: -0.5ex;
+    content: '';
+    border-radius: 4px;
+    background-color: #eee;
   }
 }
 
@@ -92,13 +97,15 @@ pre {
   text-align: right;
   text-decoration: none;
   text-transform: uppercase;
+  text-wrap: balance;
   border: 2px solid $color-text;
   border-radius: $bdrs;
-  text-wrap: balance;
+
   @include screen(sm) {
     line-height: 1;
     padding-block-start: 2rem;
   }
+
   &:hover {
     color: $color-background;
     background-color: $color-text;
@@ -110,13 +117,13 @@ pre {
 }
 
 .overlay-window {
-  background-color: var(--color-background);
   position: fixed;
-  inset: 0;
   z-index: 2;
+  inset: 0;
   opacity: 0.5;
-  border-radius: 1rem;
   border: 2px solid var(--color-border-mid);
+  border-radius: 1rem;
+  background-color: var(--color-background);
 }
 
 .router-target {
