--- a/src/scss/base/_utils.scss
+++ b/src/scss/base/_utils.scss
@@ -1,4 +1,4 @@
-@use "../abstract/variables";
+@use '../abstract/variables';
 
 .visually-hidden {
   position: absolute;
@@ -21,8 +21,8 @@
   --color-background: #2a2722;
   --color-text: #fafafa;
   --color-text-mid: #9f9f9f;
-  --color-border-mid: hsl(38, 11%, 25%);;
-  --color-border-light: hsl(38, 11%, 45%);;
+  --color-border-mid: hsl(38deg 11% 25%);
+  --color-border-light: hsl(38deg 11% 45%);
 }
 
 .text-mid {
