--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -1,17 +1,20 @@
-@use "../abstract/variables" as *;
+@use '../abstract/variables' as *;
 
 .card {
   display: grid;
   padding: 1rem;
   border: 2px solid $color-border-light;
   border-radius: $bdrs;
+
   &--linked {
     position: relative;
     transition: border-color 0.1s ease;
+
     &:has(a:hover) {
       border-color: $color-border-mid;
     }
   }
+
   &__title {
     font-family: $font-serif-display;
     font-size: 2rem;
@@ -19,10 +22,12 @@
     line-height: 1;
     margin-block-end: 0.5rem;
   }
+
   &__author {
     font-size: 0.75rem;
     text-transform: uppercase;
   }
+
   &__link {
     font-size: 0.75rem;
     font-weight: bold;
@@ -34,14 +39,16 @@
     font-family: $font-sans;
     text-transform: uppercase;
     display: block;
+
     .card--linked & {
-      &:before {
+      &::before {
         position: absolute;
         z-index: 2;
         inset: 0;
-        content: "";
+        content: '';
       }
     }
+
     &:hover {
       text-decoration: underline;
     }
@@ -50,6 +57,7 @@
 
 .card-figure {
   --aspect: auto;
+
   img {
     width: 100%;
     max-width: 14rem;
@@ -59,6 +67,7 @@
     border: 2px solid $color-text;
     border-radius: $bdrs;
   }
+
   figcaption {
     font-size: 0.75rem;
     color: $color-text-mid;
