--- a/src/scss/components/_case-study-block.scss
+++ b/src/scss/components/_case-study-block.scss
@@ -9,18 +9,6 @@
   border: 2px solid $color-border-light;
   border-radius: $bdrs;
 
-  &--clickable {
-    cursor: pointer;
-    &:hover,
-    &:focus-within,
-    &:has(a:hover) {
-      border-color: $color-border-mid;
-      a span {
-        background-size: 100% 1px;
-      }
-    }
-  }
-
   @include screen(sm) {
     margin-block-end: 0;
   }
@@ -31,7 +19,17 @@
     align-items: end;
   }
 
-  &:before {
+  &--clickable {
+    cursor: pointer;
+
+    &:hover,
+    &:focus-within,
+    &:has(a:hover) {
+      border-color: $color-border-mid;
+    }
+  }
+
+  &::before {
     font-size: 0.75rem;
     display: inline-block;
     margin-block-end: 0.75rem;
@@ -41,6 +39,7 @@
       align-self: start;
     }
   }
+
   &__title {
     font-family: $font-serif-display;
     font-size: 3rem;
@@ -59,6 +58,7 @@
       padding-inline-end: 1rem;
     }
   }
+
   &__logo {
     max-width: 1em;
     height: 100%;
@@ -69,6 +69,7 @@
       width: 100%;
     }
   }
+
   &__description {
     line-height: 1.5;
     margin-block-end: 2rem;
@@ -77,6 +78,7 @@
       margin-block-end: 0;
     }
   }
+
   &__meta {
     font-size: 0.75rem;
     line-height: 1.3;
@@ -90,10 +92,12 @@
       justify-items: end;
       text-align: right;
     }
+
     &:has(+ .case-study-block__coming-soon) {
       margin-block-end: 1rem;
     }
   }
+
   &__link,
   &__coming-soon {
     font-size: 0.75rem;
@@ -107,38 +111,46 @@
       justify-self: end;
     }
   }
+
   &__coming-soon {
     color: $color-text-mid;
   }
+
   &__link {
     display: inline-block;
     margin-block-end: -1rem;
     padding-block: 1rem;
     text-decoration: none;
+    paint-order: stroke fill;
     -webkit-text-stroke: 2px $color-background;
 
-    paint-order: stroke fill;
     @include screen(xl) {
       line-height: 1;
       max-width: 23ch;
       text-align: right;
       text-wrap: balance;
     }
-    span {
+
+    .with-underline {
       line-height: 1.1;
       transition: background-size 0.2s $ease-out-editorial;
       background-image: linear-gradient(currentColor, currentColor);
       background-repeat: no-repeat;
       background-position: 0 calc(1em + 1px);
       background-size: 0% 1px;
+      @media (prefers-reduced-motion: reduce) {
+        transition-duration: 0s;
+      }
     }
 
+    .case-study-block--clickable:is(:hover, :focus) &,
     &:hover {
-      span {
+      .with-underline {
         background-size: 100% 1px;
       }
     }
   }
+
   &__3d-logo {
     position: absolute;
     top: 0.5rem;
