--- a/src/scss/components/_case-study-row.scss
+++ b/src/scss/components/_case-study-row.scss
@@ -9,31 +9,28 @@ $transition: transform $duration ease-in;
   overflow: hidden;
   row-gap: 0.5ch;
   width: 100vw;
-  margin-left: calc(50% - 50vw);
+  margin-inline-start: calc(50% - 50vw);
   counter-reset: rows;
 }
+
 .case-study-row {
+  --color-echo: #3e3b36;
+
   position: relative;
   counter-increment: rows;
 
-  --color-echo: #3e3b36;
-  &:has(a:hover) {
-  }
   &--coming-soon {
     position: relative;
     cursor: disabled;
     pointer-events: none;
     color: $color-text-mid;
-    .case-study-row__title {
-      color: $color-text-mid;
-    }
-    &:before {
+
+    &::before {
       font-weight: bold;
       position: absolute;
       z-index: 2;
       inset-block: 0;
-      // inset: 0;
-      left: 0;
+      inset-inline-start: 0;
       display: grid;
       place-content: center;
       width: var(--coming-soon-width);
@@ -42,23 +39,27 @@ $transition: transform $duration ease-in;
       text-transform: uppercase;
       color: $color-text;
     }
-    &:after {
+
+    &::after {
       position: absolute;
       z-index: 1;
       inset: 0;
       content: '';
       backdrop-filter: blur(2px);
     }
+
     .no-js & {
-      &:before {
+      &::before {
         inset: 0;
         backdrop-filter: blur(2px);
       }
-      &:after {
+
+      &::after {
         content: unset;
       }
     }
   }
+
   li:nth-of-type(1) & {
     @include screen(sm) {
       padding-inline-start: 5rem;
@@ -67,6 +68,7 @@ $transition: transform $duration ease-in;
       padding-inline-start: calc(10vw);
     }
   }
+
   li:nth-of-type(2) & {
     @include screen(sm) {
       padding-inline-start: 10rem;
@@ -75,6 +77,7 @@ $transition: transform $duration ease-in;
       padding-inline-start: calc(20vw);
     }
   }
+
   li:nth-of-type(3) & {
     @include screen(sm) {
       padding-inline-start: 8rem;
@@ -83,6 +86,7 @@ $transition: transform $duration ease-in;
       padding-inline-start: calc(40vw);
     }
   }
+
   li:nth-of-type(4) & {
     @include screen(sm) {
       padding-inline-start: 6rem;
@@ -91,14 +95,16 @@ $transition: transform $duration ease-in;
       padding-inline-start: calc(35vw);
     }
   }
+
   li:nth-of-type(5) & {
     @include screen(sm) {
-      padding-inline-start: 0rem;
+      padding-inline-start: 0;
     }
     @include screen(lg) {
       padding-inline-start: calc(25vw);
     }
   }
+
   li:nth-of-type(6) & {
     @include screen(sm) {
       padding-inline-start: 2rem;
@@ -107,16 +113,19 @@ $transition: transform $duration ease-in;
       padding-inline-start: calc(5vw);
     }
   }
+
   &__inner {
     position: relative;
     display: inline-block;
   }
+
   &__logo {
     width: 1em;
     max-height: 0.8em;
     object-fit: contain;
     aspect-ratio: 1;
   }
+
   &__title,
   &__echoes {
     font-family: $font-serif-display;
@@ -127,6 +136,7 @@ $transition: transform $duration ease-in;
       font-size: clamp(2.5rem, -1.3603rem + 6.8627vw, 5.125rem);
     }
   }
+
   &__title {
     position: relative;
     display: flex;
@@ -135,28 +145,34 @@ $transition: transform $duration ease-in;
 
     @include screen(sm) {
       transition: $transition;
+
       .case-study-row:has(a:hover) & {
         transform: translateX(-1.5ch);
       }
     }
-    &:before {
+
+    .case-study-row--coming-soon & {
+      color: $color-text-mid;
+    }
+
+    &::before {
       font-family: $font-sans;
       font-size: 0.75rem;
-      // margin-top: 0.5rem;
-      // margin-inline-end: 0.5ch;
       display: inline-block;
       align-self: start;
       content: '(0' counter(rows) ')';
     }
   }
+
   &__title-text {
+    --logo-spacing: 1em;
+
     position: relative;
     width: 100%;
     white-space: nowrap;
 
-    --logo-spacing: 1em;
     .case-study-row--external & {
-      &:after {
+      &::after {
         font-family: $font-sans;
         font-size: 0.75rem;
         position: absolute;
@@ -165,6 +181,7 @@ $transition: transform $duration ease-in;
         display: inline-block;
         content: var(--view-the-work, '(external)');
         color: $color-text-mid;
+
         @include screen(lg) {
           bottom: -0.35rem;
           text-transform: uppercase;
@@ -175,6 +192,7 @@ $transition: transform $duration ease-in;
       }
     }
   }
+
   &__echoes {
     position: absolute;
     right: calc(100% + 0.5ch);
@@ -185,16 +203,19 @@ $transition: transform $duration ease-in;
     @include screen(sm) {
       filter: blur(1.5px);
     }
+
     .case-study-row:has(a:hover) & {
       @include screen(sm) {
         transform: translateX(-1.5ch);
         filter: blur(0);
       }
     }
+
     &--after {
       top: 0;
       right: unset;
       left: calc(100% + 0.5ch);
+
       .case-study-row:has(a:hover) & {
         transform: translateX(3ch);
 
@@ -204,58 +225,52 @@ $transition: transform $duration ease-in;
       }
     }
   }
+
   &__echo {
-    &:before {
+    &::before {
       font-family: $font-sans;
       font-size: 0.75rem;
       display: inline-block;
-      // margin-top: 0.5rem;
       margin-inline-end: 0.5ch;
       content: '(0' counter(rows) ')';
       vertical-align: top;
     }
   }
+
   &__link {
     position: absolute;
-    // right: 0;
     left: 0;
     width: 100%;
     height: 100%;
     transition: width $duration;
+
     &:hover {
       width: calc(100% + 3ch);
     }
   }
+
   &__title-divider {
     position: absolute;
     top: 50%;
     display: inline-block;
     width: 0;
     height: 3px;
-    // transition: transform 0.2s ease-in, width 0s .2s;
     transition: width $duration ease-in;
     transform: translateY(-50%);
-    transform-origin: 50% 0;
     transform-origin: 0% 0;
     background-color: currentColor;
+
     .case-study-row:has(a:hover) & {
       width: 3ch;
     }
   }
+
   &__half {
     display: inline-block;
     transition: $transition;
-    .case-study-row:has(a:hover) & {
-      @include screen(sm) {
-        // transform: translateX(-1.5ch);
-      }
-    }
+
     .case-study-row:has(a:hover) &:last-child {
       transform: translateX(3ch);
-
-      @include screen(sm) {
-        // transform: translateX(1.5ch);
-      }
     }
   }
 }
@@ -264,9 +279,11 @@ $transition: transform $duration ease-in;
   .case-study-row * {
     transform: none !important;
   }
+
   .case-study-row__title-divider {
     display: none;
   }
+
   .case-study-row:has(a:hover) .case-study-row__title {
     opacity: 0.5;
   }
