--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -26,16 +26,9 @@ picture:has(.footer-border) {
 
 .footer {
   position: relative;
-  // margin-top: calc(25rem * .75);
   max-width: 100vw;
   padding-block-start: 3rem;
-  // padding-block-end: 18rem;
   padding-inline: 1rem;
-  // background-image: url(/img/thorns-rotated.png);
-  // background-repeat: no-repeat;
-  // background-position-x: center;
-  // background-position-y: 140%;
-  // background-size: calc(100% - 1rem);
 
   @include screen(lg) {
     padding-block-end: 3rem;
@@ -43,6 +36,7 @@ picture:has(.footer-border) {
   @include screen(xl) {
     padding-block-start: 6rem;
   }
+
   .home & {
     padding-block-start: 0;
   }
@@ -55,6 +49,7 @@ picture:has(.footer-border) {
       gap: 0.5ch;
     }
   }
+
   &__breadcrumb {
     font-size: 1.25rem;
     display: flex;
@@ -66,50 +61,55 @@ picture:has(.footer-border) {
     @include screen(lg) {
       font-size: 1rem;
     }
+
     &--title {
       font-style: italic;
     }
-    &:before {
+
+    &::before {
       font-style: normal;
       position: absolute;
       left: 0;
-      // content: "↴";
-      // content: "↘";
       content: '⮡';
       text-decoration: none;
       @include screen(lg) {
         content: '→';
       }
     }
+
     @for $nth from 2 through 5 {
       &:nth-child(#{$nth}) {
-        // text-indent: #{($nth - 1) * 2ch};
-        margin-left: #{($nth - 1) * 1ch};
+        margin-inline-start: #{($nth - 1) * 1ch};
+
         @include screen(lg) {
-          margin-left: 0;
+          margin-inline-start: 0;
         }
       }
     }
+
     &:first-child {
       @include screen(lg) {
         padding-inline-start: 0;
       }
-      &:before {
+
+      &::before {
         content: '→';
         @include screen(lg) {
           content: unset;
         }
       }
     }
+
     &:hover {
       text-decoration: underline;
-      &:before {
+
+      &::before {
         text-decoration: none;
       }
     }
   }
+
   &__nav {
-    // margin-block-end: 2rem;
     @include screen(lg) {
       display: grid;
       grid-auto-flow: dense;
@@ -122,8 +122,8 @@ picture:has(.footer-border) {
       grid-template-columns: 2fr 4fr 2fr 2fr 2fr;
       margin-block-end: 7rem;
     }
-    // @include screen()
   }
+
   &__section {
     margin-block-end: 1.5rem;
 
@@ -134,6 +134,7 @@ picture:has(.footer-border) {
     &--collapsed {
       display: none;
     }
+
     &--breadcrumb {
       margin-block-end: 4rem;
 
@@ -147,6 +148,7 @@ picture:has(.footer-border) {
         margin-block-end: 5rem;
       }
     }
+
     &--social {
       margin-block-end: 2rem;
 
@@ -154,6 +156,7 @@ picture:has(.footer-border) {
         grid-column: 2;
         grid-row-end: span 2;
         grid-row-start: 2;
+
         .home & {
           grid-row-start: 1;
         }
@@ -161,22 +164,26 @@ picture:has(.footer-border) {
       @include screen(xl) {
         grid-column: auto;
         grid-row: auto;
+
         .home & {
           grid-row-start: auto;
         }
       }
     }
+
     &--link-group {
       @include screen(xl) {
         grid-column: 2;
       }
     }
+
     &:not(:is(.footer__section--link-group, .footer__section--breadcrumb)) {
       @include screen(xl) {
         grid-row-end: span 2;
       }
     }
   }
+
   &__meta-title {
     font-weight: 400;
     line-height: 1.2;
@@ -184,7 +191,6 @@ picture:has(.footer-border) {
     letter-spacing: -0.01em;
     text-transform: uppercase;
     color: #b3b3b3;
-    // color: $color-text-mid;
   }
 
   &__link {
@@ -200,7 +206,8 @@ picture:has(.footer-border) {
     @include screen(lg) {
       font-size: 1rem;
     }
-    &:after {
+
+    &::after {
       position: absolute;
       bottom: 0.3em;
       left: 0;
@@ -212,19 +219,21 @@ picture:has(.footer-border) {
       transform-origin: 0 0;
       background-color: currentColor;
     }
+
     &:hover {
-      // text-decoration: underline;
-      &:after {
+      &::after {
         transform: scaleX(1);
       }
     }
   }
+
   &__link-description {
     font-size: 0.75rem;
     line-height: 1.2;
     letter-spacing: -0.01em;
     color: #a9a9a9;
   }
+
   &__colophon {
     font-family: $font-serif;
     line-height: 1.3;
@@ -243,13 +252,12 @@ picture:has(.footer-border) {
       display: block;
     }
   }
+
   &__graphic {
     overflow: hidden;
     max-height: calc(25rem / 2);
     aspect-ratio: 2 / 1;
     margin-inline: auto;
-    // padding-block-start: 3rem;
-    // margin-block-start: -3rem;
 
     @include screen(lg) {
       position: absolute;
@@ -264,6 +272,7 @@ picture:has(.footer-border) {
       height: calc(100% - 9rem);
       max-height: 25rem;
     }
+
     svg {
       @include screen(lg) {
         width: 200%;
