--- a/src/scss/components/_home-nav.scss
+++ b/src/scss/components/_home-nav.scss
@@ -1,9 +1,10 @@
-@use "../abstract/variables" as *;
-@use "../abstract/mixins" as *;
+@use '../abstract/variables' as *;
+@use '../abstract/mixins' as *;
 
 .home-nav {
   grid-column-end: span 2;
   margin-block-start: 2rem;
+
   &__meta-title {
     font-size: 0.75rem;
     font-weight: 400;
@@ -17,11 +18,13 @@
       font-size: 1rem;
     }
   }
+
   &__list {
     margin: 0;
     margin-block-end: 1rem;
     padding: 0;
   }
+
   &__link {
     line-height: 1.2;
     position: relative;
@@ -31,31 +34,33 @@
     text-decoration: none;
     letter-spacing: -0.01em;
 
-    &:after {
+    @include screen(lg) {
+      font-size: 1.25rem;
+    }
+
+    &::after {
       position: absolute;
       bottom: 0.3em;
       left: 0;
       width: 100%;
       height: 1px;
-      content: "";
+      content: '';
       transition: transform 0.2s $ease-out-editorial;
       transform: scaleX(0);
       transform-origin: 0 0;
       background-color: currentColor;
+      @media (prefers-reduced-motion: reduce) {
+        transition-duration: 0s;
+      }
     }
+
     &:hover {
-      // text-decoration: underline;
-      &:after {
+      &::after {
         transform: scaleX(1);
       }
     }
-    @include screen(lg) {
-      font-size: 1.25rem;
-    }
-    &:hover {
-      // text-decoration: underline;
-    }
   }
+
   &__link-description {
     font-size: 0.75rem;
     line-height: 1.2;
