--- a/src/scss/components/_page-nav.scss
+++ b/src/scss/components/_page-nav.scss
@@ -24,10 +24,12 @@
     grid-template-columns: minmax(0, 1fr) auto minmax(0, 1fr);
     margin-block-end: 0;
   }
+
   &--inert {
     user-select: none;
     pointer-events: none;
   }
+
   &--hidden {
     transition: all 0.2s;
     transform: translateY(-100%);
@@ -37,9 +39,11 @@
       transform: translateY(0);
     }
   }
+
   .no-js.home & {
     display: none;
   }
+
   &__brand {
     position: relative;
     display: inline-block;
@@ -50,7 +54,8 @@
     @include screen(lg) {
       grid-column: 2;
     }
-    &:after {
+
+    &::after {
       position: absolute;
       bottom: calc(1em + 1px);
       left: 0;
@@ -61,19 +66,26 @@
       transform: scaleX(0);
       transform-origin: 100% 0;
       background-color: currentColor;
+      @media (prefers-reduced-motion: reduce) {
+        transition-duration: 0s;
+      }
     }
+
     &:hover {
-      // text-decoration: underline;
-      &:after {
+      &::after {
         transform: scaleX(1);
         transform-origin: 0 0;
       }
     }
   }
+
   &__brand-flag {
     width: max-content;
     transition: all 0.2s;
     color: $color-text-mid;
+    @media (prefers-reduced-motion: reduce) {
+      transition-duration: 0s;
+    }
 
     @include screen(sm) {
       position: absolute;
@@ -95,9 +107,10 @@
       transform: translateX(-1rem);
       text-align: left;
     }
-    &:before {
+
+    &::before {
       display: inline-block;
-      margin-right: 0.5ch;
+      margin-inline-end: 0.5ch;
       content: '—';
 
       @include screen(sm) {
@@ -112,6 +125,7 @@
         transform: translateX(0.5rem);
       }
     }
+
     a:hover & {
       transform: translateX(0);
       opacity: 1;
@@ -122,7 +136,8 @@
       @include screen(1270px) {
         transform: translateX(0);
       }
-      &:before {
+
+      &::before {
         transform: translateX(0);
 
         @include screen(lg) {
@@ -134,6 +149,7 @@
       }
     }
   }
+
   &__tagline {
     max-width: 30ch;
     margin-block-end: 1em;
@@ -146,10 +162,12 @@
     @include screen(lg) {
       max-width: unset;
     }
+
     > span {
       color: $color-text;
     }
   }
+
   &__back-link {
     position: relative;
     display: inline-block;
@@ -169,7 +187,8 @@
       padding-block: 1em;
       transform-origin: 0 0;
       clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-      &:after {
+
+      &::after {
         position: absolute;
         bottom: calc(1em + 1px);
         left: 0;
@@ -180,11 +199,15 @@
         transform: scaleX(0);
         transform-origin: 100% 0;
         background-color: currentColor;
+        @media (prefers-reduced-motion: reduce) {
+          transition-duration: 0s;
+        }
       }
     }
+
     &:hover,
     &:active {
-      span:after {
+      span::after {
         transform: scaleX(1);
         transform-origin: 0 0;
       }
