--- a/src/scss/components/_social-list.scss
+++ b/src/scss/components/_social-list.scss
@@ -1,57 +1,62 @@
-@use "../abstract/variables" as *;
+@use '../abstract/variables' as *;
 
 .social-list {
   margin: 0;
   padding: 0;
+
   &__list-item {
     line-height: 1.5;
     display: flex;
     column-gap: 0.75rem;
     align-items: center;
+
     &--disabled {
       cursor: not-allowed;
       text-decoration: line-through;
       color: $color-text-mid;
+
       a {
         cursor: not-allowed;
         pointer-events: none;
       }
     }
   }
+
   &__icon {
     width: 1rem;
     object-fit: contain;
     aspect-ratio: 1;
   }
+
   &__link {
     $padding-left: 2rem;
-    margin-left: -2rem;
-    padding-left: $padding-left;
-    text-decoration: none;
-    position: relative;
-    -webkit-text-stroke: 2px $color-background;
-  paint-order: stroke fill;
-  z-index: 0;
 
-    &:after {
-        position: absolute;
-        bottom: round(.25em, 1px);
-        left: $padding-left;
-        width: calc(100% - #{$padding-left});
-        height: 1px;
-        content: "";
-        transition: transform .2s $ease-out-editorial;
-        z-index: -1;
-        
-        transform: scaleX(0);
-        transform-origin: 0 0;
-        background-color: currentColor;
+    position: relative;
+    z-index: 0;
+    margin-inline-start: -2rem;
+    padding-inline-start: $padding-left;
+    text-decoration: none;
+    paint-order: stroke fill;
+    -webkit-text-stroke: 2px $color-background;
+
+    &::after {
+      position: absolute;
+      z-index: -1;
+      bottom: math.round(0.25em, 1px);
+      left: $padding-left;
+      width: calc(100% - #{$padding-left});
+      height: 1px;
+      content: '';
+      transition: transform 0.2s $ease-out-editorial;
+      transform: scaleX(0);
+      transform-origin: 0 0;
+      background-color: currentColor;
     }
+
     &:hover {
-      // text-decoration: underline;
-    &:after {
-transform: scaleX(1);
-    }
+      &::after {
+        transform: scaleX(1);
+      }
     }
   }
 }
