--- a/src/scss/components/_speaking-list.scss
+++ b/src/scss/components/_speaking-list.scss
@@ -1,21 +1,20 @@
 @use '../abstract/variables' as *;
 
-.speaking-list {}
+.speaking-list-item {
+  display: flex;
+  flex-direction: column;
+  margin-block-end: 2rem;
 
-.speaking-list-item  {
-    margin-block-end: 2rem;;
-    display: flex;
-    flex-direction: column;
-&__date {
+  &__date {
     font-size: 0.75rem;
     line-height: 1.1;
+    display: inline-block;
     margin-block-end: 0.75rem;
-    // margin-block-end: 1rem;
+    margin-block-end: 1em;
     text-transform: uppercase;
     color: $color-text-mid;
-    margin-block-end: 1em;
-    display:inline-block;
   }
+
   &__title {
     font-family: $font-serif-display;
     font-size: 2rem;
@@ -23,26 +22,29 @@
     line-height: 1;
     margin-block-end: 1.5rem;
   }
+
   &__description {
     line-height: 1.5;
     margin-block-end: 1rem;
   }
+
   &__link {
     font-size: 0.75rem;
     font-weight: bold;
     line-height: 1.3;
     display: block;
     margin-block-end: 1.5rem;
-    // text-align: right;
     text-decoration: none;
     text-transform: uppercase;
+
     &:hover {
       text-decoration: underline;
     }
   }
+
   &__embed {
-    aspect-ratio: 16 / 9;
-    width: 100%;
     order: 3;
+    width: 100%;
+    aspect-ratio: 16 / 9;
   }
 }
