--- a/src/scss/pages/_writing.scss
+++ b/src/scss/pages/_writing.scss
@@ -6,6 +6,11 @@
   scroll-margin-block-start: 4rem;
   padding-block-end: 4rem;
   border-block-end: 2px solid #dadada;
+
+  &:last-of-type {
+    border: none;
+  }
+
   &--card {
     position: relative;
     overflow: hidden;
@@ -14,7 +19,7 @@
     padding-top: 2rem;
     border: none;
 
-    &:before {
+    &::before {
       position: absolute;
       z-index: 1;
       inset-block: 0;
@@ -28,37 +33,6 @@
         transparent
       );
     }
-
-    .writing-section-header {
-      position: relative;
-      z-index: 2;
-      margin-block-end: 2rem;
-      margin-inline: -2rem;
-      padding-block-end: 1rem;
-      padding-inline: 2rem;
-      border-bottom: 0.5px dashed var(--color-border-light);
-      // max-width: calc(100% - 2rem);
-    }
-    .writing-section-header__title {
-      font-size: 2rem;
-      small {
-        font-size: inherit;
-        color: $color-text-mid;
-      }
-    }
-    .writing-section-header__description {
-      font-size: 1rem;
-    }
-    .recent-reading-list {
-      @media not all and (min-resolution: 0.001dpcm) {
-        @supports (-webkit-appearance: none) {
-          padding-inline: 0;
-        }
-      }
-    }
-  }
-  &:last-of-type {
-    border: none;
   }
 }
 
@@ -70,6 +44,17 @@
     column-gap: 1rem;
     grid-template-columns: auto 1fr;
   }
+
+  .writing-section--card & {
+    position: relative;
+    z-index: 2;
+    margin-block-end: 2rem;
+    margin-inline: -2rem;
+    padding-block-end: 1rem;
+    padding-inline: 2rem;
+    border-bottom: 0.5px dashed var(--color-border-light);
+  }
+
   &__title {
     font-family: $font-serif-display;
     font-size: 2rem;
@@ -82,14 +67,29 @@
       align-self: last baseline;
       max-width: 37.5rem;
     }
+
+    .writing-section--card & {
+      font-size: 2rem;
+
+      small {
+        font-size: inherit;
+        color: $color-text-mid;
+      }
+    }
   }
+
   &__description {
     @include screen(sm) {
       font-size: 1.25rem;
       align-self: last baseline;
     }
+
     &--full {
       grid-column: 1 / -1;
+    }
+
+    .writing-section--card & {
+      font-size: 1rem;
     }
   }
 }
@@ -98,27 +98,34 @@
   position: relative;
   display: grid;
   overflow: scroll;
-  // flex-wrap: nowrap;
   grid-auto-flow: column;
   gap: 1rem;
   align-items: start;
   width: 100vw;
   margin-left: calc(50% - 50vw);
   padding-inline: 3rem;
-
   scrollbar-width: none;
   overscroll-behavior-x: none;
 
+  .writing-section--card & {
+    @media not all and (min-resolution: 0.001dpcm) {
+      @supports (-webkit-appearance: none) {
+        padding-inline: 0;
+      }
+    }
+  }
+
   &::-webkit-scrollbar {
-    // height: 0px;
     display: none;
   }
-  &:after {
+
+  &::after {
     display: block;
     width: 1rem;
     height: 100%;
     content: '';
   }
+
   &__warning {
     font-family: $font-serif;
     position: sticky;
@@ -126,12 +133,14 @@
     grid-column-end: span 3;
     color: $color-text-mid;
   }
+
   .card {
     grid-row: 2;
     min-width: 18rem;
     border-width: 0.5px;
-  }
-  .card__title {
-    font-size: 1.5rem;
+
+    &__title {
+      font-size: 1.5rem;
+    }
   }
 }
