--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -31,6 +31,7 @@
 @use 'pages/work';
 @use 'pages/writing';
 @use 'pages/about';
+@use 'pages/micro';
 
 .case-study-list,
 .articles-list {
@@ -52,13 +53,6 @@
   counter-reset: case-studies;
 }
 
-// .masthead-image {
-//   width: 35rem;
-//   margin-block-end: 7rem;
-//   border: 2px solid $color-text;
-//   border-radius: $bdrs;
-// }
-
 .layout-post {
   display: grid;
   place-content: center;
@@ -76,9 +70,12 @@
 
     --standard-column: 4 / span 6;
     --pre-column: 4 / span 7;
+
     > * {
       grid-column: var(--standard-column);
     }
+
+    // stylelint-disable-next-line
     > .cp_embed_wrapper {
       grid-column-end: span 6;
     }
@@ -91,10 +88,12 @@
     //   grid-column-end: span 6;
     // }
   }
+
   h2 {
     @include screen(magazine) {
       position: relative;
-      &:before {
+
+      &::before {
         font-size: 1em;
         position: absolute;
         left: -5ch;
@@ -117,6 +116,7 @@
       padding: 1.5rem;
     }
   }
+
   .article-block {
     max-width: 60ch;
   }
@@ -125,20 +125,25 @@
     // TODO Workaround for @eleventy-img attributes on <picture>
     display: contents;
   }
+
   .flow {
     margin-block-end: 1lh;
   }
 }
+
 .subgrid {
   display: grid;
   grid-template-columns: subgrid;
+
   .column {
     --column: 1 / -1;
     --row: auto;
+
     grid-column: var(--column);
     grid-row: var(--row);
   }
 }
+
 .further-reading {
   max-width: 50ch;
   margin-block-end: 4.5rem;
@@ -164,30 +169,10 @@
     scroll-margin-block-start: 4.5rem;
     counter-increment: h2s;
   }
+
   .article-block {
     grid-column: var(--standard-column);
   }
-}
-.feed {
-  margin-block-end: 4rem;
-}
-.feed-title {
-  font-size: 1.25rem;
-  line-height: 1.3;
-  margin-block-end: 1rem;
-  text-align: center;
-}
-.feed-indicator {
-  display: block;
-  max-width: 1rem;
-  margin-block-end: 1rem;
-  margin-inline: auto;
-}
-.feed-divider {
-  display: block;
-  max-width: 2px;
-  margin-block-end: 1rem;
-  margin-inline: auto;
 }
 
 .barb-bar {
