--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -84,6 +84,7 @@
         </div>
     </div>
     {% include 'footer.njk' %}
+    {% include 'grid.njk' %}
     <script>
         document.body.classList.remove('no-js')
     </script>
