--- a/src/scss/components/_article-block.scss
+++ b/src/scss/components/_article-block.scss
@@ -87,11 +87,19 @@
         font-weight: bold;
         position: absolute;
         top: -1.3rem;
-        margin-left: 0;
+        margin-inline-start: 0;
         content: 'Featured Reading';
         text-transform: uppercase;
         color: $color-text-unthemed;
+
+        body.dark & {
+          color: $color-text;
+        }
       }
+    }
+
+    body.dark & {
+      border-color: $color-border-mid;
     }
   }
 
@@ -137,7 +145,9 @@
     line-height: 1.1;
     display: block;
     justify-self: end;
+    max-width: max-content;
     margin-block-end: -1rem;
+    margin-inline-start: auto;
     padding-block: 1rem;
     transition: background-size 0.2s $ease-out-editorial;
     text-align: right;
