--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -227,7 +227,7 @@
     grid-row: 1;
     max-width: 100%;
     margin-block-end: 0.75rem;
-    border: 2px solid currentColor;
+    border: 2px solid $color-text-unthemed;
     border-radius: $bdrs;
 
     @include screen(sm) {
@@ -247,6 +247,11 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+    }
+
+    body.dark & {
+      filter: invert(1);
+      mix-blend-mode: color-dodge;
     }
   }
 
@@ -279,7 +284,7 @@
     column-gap: 0.5ch;
     align-items: center;
     width: max-content;
-    padding-right: 0.5ch;
+    padding-inline-end: 0.5ch;
   }
 
   &__marquee-locale,
@@ -402,7 +407,7 @@
     position: absolute;
     right: calc(100% + 0.25ch);
     width: max-content;
-    color: #eee;
+    color: $color-border-light;
 
     &:last-child {
       right: unset;
@@ -549,7 +554,7 @@
   }
 
   .case-study-rows {
-    margin-bottom: 2rem;
+    margin-block-end: 2rem;
   }
 }
 
