--- a/src/scss/base/_layout.scss
+++ b/src/scss/base/_layout.scss
@@ -7,8 +7,12 @@
   box-sizing: border-box;
 }
 
-html:focus-within {
-  scroll-behavior: smooth;
+html {
+  overscroll-behavior-y: none;
+
+  &:focus-within {
+    scroll-behavior: smooth;
+  }
 }
 
 body {
