🧼 - Temporarily remove 'micro' section for launch

--- a/src/rss/index.njk
+++ b/src/rss/index.njk
@@ -9,8 +9,8 @@
     <div class="article-content rendered">
     {% renderTemplate 'md' %}
 - [Writing](/rss/writing.xml): Tutorials, essays, and ceaseless, indecipherable ranting.
-- [Micro](/rss/micro.xml): Extremely short-format riffs and ideas.
 - [Reading List](/rss/reading-list.xml): Blog posts and essays I read and enjoyed from bright people elsewhere on the internet.
+<!-- - [Micro](/rss/micro.xml): Extremely short-format riffs and ideas.-->
     {% endrenderTemplate%}
     </div>
 </section>
