--- a/src/_includes/layouts/rss.njk
+++ b/src/_includes/layouts/rss.njk
@@ -4,7 +4,7 @@
   "eleventyExcludeFromCollections": true,
   "metadata": {
     "title": "Writing from the desk of Henry (From Online)",
-    "description": "The personal site and portfolio of creative web developer Henry from Online",
+    "description": "The personal site and portfolio of creative web developer Henry (from Online).",
     "language": "en",
     "base": "https://henry.codes/",
     "author": {
