📝 - Content rendering cleanup, adjustments to meta description

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -16,7 +16,7 @@
     {% if meta.description %}
     <meta name="description" content="{{ meta.description }}" />
     {% else %}
-    <meta name="description" content="The personal site & portfolio of creative web developer Henry from Online" />
+    <meta name="description" content="The personal site &amp; portfolio of creative web developer Henry (from Online)." />
     {% endif %}
 
     <link rel="apple-touch-icon" sizes="180x180" href="/meta/apple-touch-icon.png" />
