--- a/src/scss/components/_home-nav.scss
+++ b/src/scss/components/_home-nav.scss
@@ -38,25 +38,32 @@
       font-size: 1.25rem;
     }
 
-    &::after {
-      position: absolute;
-      bottom: 0.3em;
-      left: 0;
-      width: 100%;
-      height: 1px;
-      content: '';
-      transition: transform 0.2s $ease-out-editorial;
-      transform: scaleX(0);
-      transform-origin: 0 0;
-      background-color: currentColor;
-      @media (prefers-reduced-motion: reduce) {
-        transition-duration: 0s;
+    &-title {
+      position: relative;
+      display: inline-block;
+
+      &::after {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 1px;
+        content: '';
+        transition: transform 0.2s $ease-out-editorial;
+        transform: scaleX(0);
+        transform-origin: 0 0;
+        background-color: currentColor;
+        @media (prefers-reduced-motion: reduce) {
+          transition-duration: 0s;
+        }
       }
     }
 
     &:hover {
-      &::after {
-        transform: scaleX(1);
+      .home-nav__link-title {
+        &::after {
+          transform: scaleX(1);
+        }
       }
     }
   }
@@ -64,9 +71,9 @@
   &__link-description {
     font-size: 0.75rem;
     line-height: 1.2;
-    position: absolute;
-    top: 50%;
-    left: calc(100% + 0.5ch);
+    // position: absolute;
+    // top: 50%;
+    // left: calc(100% + 0.5ch);
     width: 100%;
     transition: all 0.2s;
     transform: translateY(-50%);
